--- a/simplewebsite.css
+++ b/simplewebsite.css
@@ -5,7 +5,6 @@
       background-position: center;
       color: white;
       font-family: helvetica;
-      padding-top: 60px;
     }
     p {
       font-size: 22px;
@@ -30,6 +29,100 @@
       color: red;
       font-weight: bold;
     }
+
+/* Navbar New Start */
+
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+/*body {
+  background: linear-gradient(45deg, #FBE7C5, #F5CAC3);
+}*/
+
+.container, .button, .nav{
+  position: absolute;
+}
+
+.container {
+  /*margin: auto;*/
+  top: 0;
+  left: 80%;
+  bottom: 0;
+  right: 0;
+  width: 50px;
+  height: 100px;
+}
+
+#toggle {
+  display: none;
+}
+
+.button {
+  z-index: 999;
+  width: 43px;
+  height: 43px;
+  background: /*#F28482;*/ #ff0000;
+  border-radius: 100%;
+  transition: all 0.5s ease-in-out;
+  box-shadow: 1px 3px 10px 0 rgba(#000000, 0.3);
+  cursor: pointer;
+  
+  &:before {
+    position: absolute;
+    top: 20px;
+    left: 9px;
+    content: '';
+    width: 25px;
+    height: 2px;
+    background: #FFF;
+    transform: rotate(180deg);
+  }
+  &:after {
+    position: absolute;
+    top: 20px;
+    left: 9px;
+    content: '';
+    width: 25px;
+    height: 2px;
+    background: #FFF;
+  }
+}
+
+.nav {
+  transform: translateY(-10%);
+  opacity: 0;
+  top: 13px;
+  left: -50px;
+  transition: all 0.5s ease-in-out;
+  background: #FFF;
+  width: 150px;
+  border-radius: 5px;
+  transform: translateY(0%);
+  box-shadow: 2px 3px 10px 0 rgba(#000000, 0.1);
+}
+
+.nav a {
+  text-align: center;
+  display: block;
+  margin: 20px 0;
+  color: #F28482;
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+#toggle:checked ~ .nav {
+  opacity: 1;
+  transform: translateY(10%);
+}
+
+#toggle:checked ~ .button {
+  transform: rotate(135deg);
+   box-shadow: 0 0 0 0 transparent;
+}
+
+/* Navbar New End */
+
+
 
 /* Navbar Start */
 
